--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 
 PHONE_NUMBER =  ""
 
-RETELL_API_KEY="48628c68-f560-475d-a0f9-2ac284db1a43"
-RETELL_AGENT_ID="277a399c4236e159d4aa7ba857b5db36"
+RETELL_API_KEY=""
+RETELL_AGENT_ID=""
 
 NGROK_IP_ADDRESS=""
 
@@ -10,3 +10,4 @@ NGROK_IP_ADDRESS=""
 TWILIO_ACCOUNT_ID=""
 TWILIO_AUTH_TOKEN=""
 
+MAKE_WEBHOOK_URL=""
