Following Webhooks GHL Added.

--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
 
-PHONE_NUMBER =  ""
 
+PHONE_NUMBER = ""
+
+
+#Jorge
 RETELL_API_KEY=""
+OUTBOUND_RETELL_AGENT_ID=""
 RETELL_AGENT_ID=""
 
 NGROK_IP_ADDRESS=""
@@ -11,3 +15,6 @@ TWILIO_ACCOUNT_ID=""
 TWILIO_AUTH_TOKEN=""
 
 MAKE_WEBHOOK_URL=""
+
+GHL_VOICE_MAIL_URL=""
+GHL_REMOVE_VOICE_MAIL_URL=""
