Status Callback URL added

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-PHONE_NUMBER = ""
+PHONE_NUMBER =  ""
 
+#Jorge
 RETELL_API_KEY=""
-RETELL_AGENT_ID=""
+OUTBOUND_RETELL_AGENT_ID=""
+INBOUND_RETELL_AGENT_ID=""
 
 NGROK_IP_ADDRESS=""
 
@@ -13,3 +15,4 @@ MAKE_WEBHOOK_URL=""
 
 GHL_VOICE_MAIL_URL=""
 GHL_REMOVE_VOICE_MAIL_URL=""
+STATUS_URL=""
