Advanced call analisis

--- a/.env
+++ b/.env
@@ -2,8 +2,7 @@ PHONE_NUMBER =  ""
 
 #Jorge
 RETELL_API_KEY=""
-OUTBOUND_RETELL_AGENT_ID=""
-INBOUND_RETELL_AGENT_ID=""
+RETELL_AGENT_ID=""
 
 NGROK_IP_ADDRESS=""
 
